--- a/css/style.css
+++ b/css/style.css
@@ -4,11 +4,18 @@
 body {
     margin: 0;
     font-family: Arial, sans-serif;
+    /*padding: 0; */ /*archive : 무슨 차이인지 잘 모르겠음. 좀 더 확인 필요 */
 }
 
 .container {
     display: flex;
     height: 100vh;
+
+    /*archive : 2개 모두 무슨 차이인지 잘 모르겠음. 좀 더 확인 필요 */
+    /*
+    max-width: 1200px;
+    margin: 0 auto;
+     */
 }
 
 .sidebar {
@@ -27,13 +34,24 @@ ul {
     list-style-type: none;
     padding: 0;
 }
+
 ul li {
     padding: 10px;
     cursor: pointer;
 }
+
 ul li:hover {
     background-color: #ddd;
 }
+
+ul li a {
+    text-decoration-line: none;
+}
+
+ul li a:visited {
+    color:black
+}
+
 .submenu {
     display: none;
     padding-left: 20px;
